Fix for MCKIN-1476 z-index issue with popup
please see comments in ticket for more details.

--- a/ooyala_player/public/css/ooyala_player.css
+++ b/ooyala_player/public/css/ooyala_player.css
@@ -15,6 +15,7 @@
     width: 640px;
     min-height: 360px;
     height:auto;
+    z-index:10;
 }
 
 .ooyala-player-xblock-wrapper .ooyala-overlay > div {
